default/objects/RM_Svg_Node_Association__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>RM Svg Node Associations</relationshipLabel>
    <relationshipName>RM_Svg_Node_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>