default/objects/RM_Svg_Node_Association__c/fields/Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>Relationship_Map__c</referenceTo>
    <relationshipLabel>RM Svg Node Associations</relationshipLabel>
    <relationshipName>RM_Svg_Node_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>