default/objects/RM_Svg_Node_Association__c/fields/RM_Svg__c.field-meta.xml
<CustomField>
    <fullName>RM_Svg__c</fullName>
    <label>RM Svg</label>
    <referenceTo>RM_Svg__c</referenceTo>
    <relationshipLabel>RM Svg Node Associations</relationshipLabel>
    <relationshipName>RM_Svg_Node_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>